mixin paper-font-common-base

--- a/video-player.html
+++ b/video-player.html
@@ -4,6 +4,7 @@
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../paper-slider/paper-slider.html">
 <link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../paper-styles/paper-styles.html">
 
 <link rel="import" href="../fullscreen-enabled/fullscreen-enabled.html">
 
@@ -15,6 +16,7 @@
         max-height: 100vh;
         max-width: 100vw;
         overflow: hidden;
+        @apply(--paper-font-common-base);
       }
 
       video {
