--- a/demo/index.html
+++ b/demo/index.html
@@ -22,6 +22,7 @@
         width: 50%;
         height: 50%;
       }
+
     </style>
   </head>
   <body>
@@ -30,6 +31,9 @@
         <source src="buck_bunny.mp4" type="video/mp4">
         Your browser does not support the <code>video</code> element.
       </video-player>
+    </div>
+
+    <div id="info">
     </div>
   </body>
 </html>
