--- a/video-player.html
+++ b/video-player.html
@@ -138,7 +138,7 @@
     <div id="controls">
       
       <paper-slider id="progress_bar" 
-        on-change="_update_time"
+        on-change="update_time"
       ></paper-slider>
 
 
@@ -231,7 +231,8 @@
         currentTime: {
           type: Number,
           value: 0.00,
-          notify: true
+          notify: true,
+          observer: '_current_time_changed'
         },
         /** The current volume level. */
         volumeLevel: {
@@ -259,26 +260,26 @@
           notify: true,
           observer: '_max_zoom_changed' 
         },
-        /* The `xOffset` of the center pixel. */
+        /* The X distance from the pixel at the center of the viewable region to the pixel at the center of the scaled video. */
         xOffset: {
           type: Number,
           value: 0,
           notify: true,
         },
-        /* The `yOffset` of the center pixel. */
+        /* The Y distance from the pixel at the center of the viewable region to the pixel at the center of the scaled video. */
         yOffset: {
           type: Number, 
           value: 0,
           notify: true,
         },
-        /* The X offset before any currently occurring drag gestures. */
+        /* The `xOffset` before any currently occurring drag gestures. */
         xOffsetBeforeDrag: {
           type: Number,
           value: 0,
           notify: true,
           readOnly: true
         },
-        /* The Y offset before any currently occurring drag gestures. */
+        /* The `yOffset` before any currently occurring drag gestures. */
         yOffsetBeforeDrag: {
           type: Number,
           value: 0,
@@ -297,13 +298,17 @@
 
       listeners: {
         'video.tap': 'toggle_play',
-        'video.timeupdate': '_update_progress',
+        'video.timeupdate': 'update_time',
+        'video.ended': 'update_time',
         'video.loadedmetadata': '_set_duration',
         'progress_bar.mouseover': '_toggle_progress_hover_state',
         'progress_bar.mouseout': '_toggle_progress_hover_state',
       },
 
-
+      /* Duration can't be set until the video's metadata loads */
+      _set_duration: function (event, detail) {
+        this.duration = this.$.video.duration;
+      },
 
 
 
@@ -362,7 +367,6 @@
 
       /** 
        * Pans the video. 
-       *
        *   - if `delta` is **falsey**: `x` and `y` are direct mapped to `[xy]Offset`.  
        *   - if `delta` is **truthy**: `x` and `y` are treated as delta changes to `[xy]Offset`.
        */
@@ -381,6 +385,33 @@
         } else {
           this.xOffset = x;
           this.yOffset = y;
+        }
+      },
+
+
+      /**
+       * Updates `currentTime`
+       *   - if `delta` is **falsey**: `time` is direct mapped to `currentTime`.  
+       *   - if `delta` is **truthy**: `time` is treated as a delta change to `currentTime`.
+       */
+      update_time: function (time, delta) {
+        var event = time;
+        if (event.target) { 
+          // This function to be invoked as an event handler. 
+          var event = Polymer.dom(event);
+          if (event.localTarget == this.$.progress_bar) { 
+            this.currentTime = this.$.video.duration * (this.$.progress_bar.value / 100);
+          } else if (event.localTarget == this.$.video) {
+            if (this.$.video.ended) {
+              this.playState = 'ended'; 
+            } else {
+              this._incrementing_time = true;
+              this.currentTime = this.$.video.currentTime;
+            }
+          } 
+        } else {  
+          // the user is calling this function directly. 
+          this.currentTime = (delta ? this.currentTime : 0) + time;
         }
       },
 
@@ -434,6 +465,13 @@
         this.transform(transform, this.$.video);
       },
 
+      _convert_range: function(number, old_range, new_range) {
+        var old_diff = old_range[1] - old_range[0];
+        var new_diff = new_range[1] - new_range[0];
+        var value = (((number - old_range[0]) * new_diff) / old_diff) + new_range[0];
+        return value;
+      },
+
 
 
       _max_zoom_changed: function (new_value, old_value) {
@@ -452,7 +490,7 @@
         var scaled_dimensions = this.$.video.getBoundingClientRect();
         _.each(components, function (obj, key) {
           var unscaled = self.$.video[_.camelCase('offset '+obj.dimension)];
-          var scaled   = scaled_dimensions[obj.dimension];  
+          var scaled = scaled_dimensions[obj.dimension];  
           var boundary = (scaled - unscaled) / 2;
           var value = _.clamp(obj.value, -boundary, boundary);
           self.$.video.style[obj.css] = value + 'px';
@@ -460,6 +498,21 @@
       },
 
 
+      _current_time_changed: function(new_value, old_value) {
+        if(this.duration > 0 && !_.inRange(new_value, this.duration)) {
+          this.currentTime = old_value;
+          return;
+        }
+        this.$.progress_bar.value = (100 / this.duration) * new_value;
+        if (!this._incrementing_time) { 
+          this.$.video.currentTime = new_value; 
+        }
+        console.log(this.currentTime);
+        console.log(this.duration);
+        console.dir(this.$.video);
+        if (this.$.video.ended) { this.play_state = 'ended'; }
+        this._incrementing_time = false;
+      },
 
 
 
@@ -519,8 +572,6 @@
         return curr + ' / ' + durr;
       },
 
-
-
       _format_time: function (seconds) {
         var minutes = Math.floor(seconds / 60);
         minutes = (minutes >= 10) ? minutes : "0" + minutes;
@@ -538,15 +589,8 @@
 
 
 
-      /* Something needs to be done to make these adhere to the structural style above */
-      _update_progress: function (event, detail) {
-        this.$.progress_bar.value = (100 / this.$.video.duration) * this.$.video.currentTime;
-        this.currentTime = this.$.video.currentTime;
-      },
 
-      _update_time: function (event, detail) {
-        this.$.video.currentTime = this.$.video.duration * (this.$.progress_bar.value / 100);
-      },
+      /* Something needs to be done to make these adhere to the structural style above */
 
       _toggle_progress_hover_state: function (event, detail) {
         this.$.progress_bar.classList.toggle('hover');
@@ -558,16 +602,9 @@
       },
 
 
-      _set_duration: function (event, detail) {
-        this.duration = this.$.video.duration;
-      },
 
-      _convert_range: function(number, old_range, new_range) {
-        var old_diff = old_range[1] - old_range[0];
-        var new_diff = new_range[1] - new_range[0];
-        var value = (((number - old_range[0]) * new_diff) / old_diff) + new_range[0];
-        return value;
-      }
+
+
 
 
 
