--- a/demo/index.html
+++ b/demo/index.html
@@ -50,6 +50,8 @@
       <div id="container">
         <div id="box">
           <video-player
+            autoplay
+            loop
             current-time="{{current_time}}"
             play-state="{{play_state}}"
             volume-level="{{volume_level}}"
