add documentation up top, change pan_video to pan and start implementing custom styling

--- a/demo/index.html
+++ b/demo/index.html
@@ -42,6 +42,10 @@
         padding-left: 20px;
         box-sizing: border-box;
       }
+      video-player {
+        --video-player-progress-color: #234;
+        --video-player-secondary-color: yellow;
+      }
     </style>
   </head>
   <body>
