make the demo colors prettier

--- a/demo/index.html
+++ b/demo/index.html
@@ -43,8 +43,8 @@
         box-sizing: border-box;
       }
       video-player {
-        --video-player-progress-color: #234;
-        --video-player-secondary-color: yellow;
+        --video-player-progress-color: var(--paper-blue-700);
+        --video-player-secondary-color: var(--paper-green-a400);
       }
     </style>
   </head>
